# nobious_chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  goal.md  ims_apis.rest  mkdocs.yml  pyproject.toml  requirements.txt  wrangler.jsonc
cli/: index_docs.py
docs/: architecture.md  discussion.md  index.md  requirements.md  solution.md
src/chat_service/: account_tools.py  agent.py  app.py  config.py  doc_tools.py  prompts.py  session.py
test_client/: chat_client.py
tests/: conftest.py  test_account_mcp.py  test_account_tools.py  test_chat_service.py  test_doc_mcp.py  test_e2e.py
